--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
+    "@react-native-community/geolocation": "^3.0.1",
     "@react-native-firebase/app": "^15.3.0",
     "@react-native-firebase/auth": "^15.3.0",
     "@react-native-firebase/firestore": "^15.3.0",
